<?xml version="1.0"?>
<package>
  <name>reflexxes_effort_controllers</name>
  <version>0.0.0</version>
  <description>The reflexxes_effort_controllers package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>LGPL</license>

  <author email="jbo@jhu.edu">Jonathan Bohren</author>

  <build_depend>realtime_tools</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>reflexxes_type2</build_depend>
  <build_depend>effort_controllers</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>reflexxes_type2</run_depend>
  <run_depend>effort_controllers</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <controller_interface plugin="${prefix}/ros_control_plugins.xml"/>
  </export>
</package>
